<resources>
    <string name="app_name" translatable="false">QuidProQuo</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>

    <string name="app_slogan">The easiest way to ask or help your neighbourgs</string>
    <string name="login_page_cool">It is fast and free!</string>
    <string name="powered_by">powered_by</string>
    <string name="app_author">phansier</string>
    <string name="editNameHint">Username</string>
    <string name="editPasswHint">Password</string>
    <string name="editEmailHint" translatable="false">Email</string>
    <string name="signUpButton">Sign Up for Quid</string>
    <string name="logInButton">Log In for Quid</string>
    <string name="logOutButton">Log Out</string>
    <string name="postButton">New Post</string>
    <string name="dialog_logout_message">Are you sure you want to log out?</string>
    <string name="dialog_logout_title">Log Out</string>
    <string name="Cancel">Cancel</string>
    <string name="new_post">Add New Post</string>
    <string name="new_post_name">Title</string>
    <string name="new_post_text">Description</string>
    <string name="userImageViewDescr">userpic</string>
    <!--<string name="editButtonHolder">Button for editing if post is your</string>-->
    <string name="postStateMarkerHolder" translatable="false">PostStateMarker</string>
    <string-array name="statelist">
        <item>Ask</item>
        <item>Suggest</item>
        <item>Advert</item>
    </string-array>
    <string-array name ="searchDistance">
        <item>100 m</item>
        <item>500 m</item>
        <item>1000 m</item>
        <item>2500 m</item>
        <item>5000 m</item>
    </string-array>
    <!--<string name="title_activity_post_info">PostInfoActivity</string>-->
    <!--<string name="post_id">post_id</string>-->
    <string name="authorText">Author: </string>
    <string name="descriptionText">Description:</string>
    <string name="Comment">Your comment..</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="userNameText">Your username </string>
    <string name="userEmailText">Your email</string>
    <string name="addComent">Add</string>
    <string name="CommentAdd">Add</string>
    <string name="yesterday">yesterday</string>
    <string name="postNameLengthTooLong">Name length is too long (max size is 50 chars)</string>
    <string name="postTextLengthTooLong">Text length is too long (max size is 300 chars)</string>
    <string name="set_location">Set Location</string>
    <string name="find_location_button">Find Location Using Hardware</string>
    <string name="address_hint">Input address</string>
    <string name="find_address">Find Address</string>
    <!--<string name="image_intro">image</string>-->
    <string name="post">Post</string>
    <string name="generalInfo">GENERAL INFO</string>
    <string name="warning_no_records">In this location no records. Add first)</string>
    <string name="warning_no_location">Choose location to see posts</string>
    <string name="reqPW"><u>Forgot password?</u></string>


    <integer name="com_vk_sdk_AppId">5339203</integer>
    <string name="facebook_app_id" translatable="false">1724818171123780</string>
    <string name="SearchDistanceHint">Search Distance:</string>
    <string name="ShareButtonContentDescription">Share</string>
    <string name="ShowMapButton">Show post on Map</string>
    <string name="TelegramAccountHint">Your Telegram account</string>
    <string name="resetPW">Reset Password</string>
    <string name="action_settings">Settings</string>





    <string name="navigation_drawer_open" translatable="false">ndo</string>
    <string name="navigation_drawer_close" translatable="false">ndc</string>
    <string name="new_posts">New Posts</string>
    <string name="nav_my_posts">My posts</string>
    <string name="nav_faves">Faves</string>
    <string name="nav_comments">My comments</string>
    <string name="nav_settings">Account settings</string>
    <string name="nav_group_communicate">Application</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About</string>
    <string name="dialog_message">Application created by Andrey Beryukhov. For more information go to beryukhov.ru</string>
    <string name="my_posts">My Posts</string>
    <string name="warning_no_user_records">You haven\'t written posts yet</string>
    <string name="nav_posts">Posts nearby</string>
    <string name="warning_no_user_comments">You haven\'t written comments yet</string>
    <string name="my_comments">My Comments</string>
    <string name="loc_access_settings_error">Can\'t get your location due to access settings</string>
    <string name="loc_cant_get">Can\'t get your location. Please try later or by address.</string>
    <string name="loc_geocoder_error">Can\'t find this address. Try to refine the query.</string>
    <string name="loc_json">Something went wrong…</string>
    <string name="email_sent">Email with instructions was send on given e-mail.</string>
    <string name="email_not_found">No such email found.</string>
    <string name="no_internet">No Internet connection</string>

</resources>
