<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_posts" android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_posts" />
        <item android:id="@+id/nav_my_posts" android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_my_posts" />
        <!--<item android:id="@+id/nav_faves" android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/nav_faves" />-->
        <item android:id="@+id/nav_comments" android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_comments" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_group_communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/nav_share" />

            <item android:id="@+id/nav_about" android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>