<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/editNameHint"
        android:ems="10"
        android:id="@+id/editName"
        android:layout_row="0"
        android:layout_column="0"

        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/editPasswHint"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_row="2"
        android:layout_column="0"
        android:imeActionId="@+id/edit_action_signup"
        android:imeActionLabel="@string/signup" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/editEmailHint"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_row="1"
        android:layout_column="0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpButton"
        android:id="@+id/signup_button"
        android:layout_row="3"
        android:layout_column="0"
        android:enabled="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white" />
</GridLayout>