<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/editNameHint"
        android:ems="10"
        android:id="@+id/editName"
        android:layout_row="0"
        android:layout_column="0"

        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/editPasswHint"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_row="1"
        android:layout_column="0"
        android:imeActionId="@+id/edit_action_login"
        android:imeActionLabel="@string/login" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logInButton"
        android:id="@+id/login_button"
        android:layout_row="2"
        android:layout_column="0"
        android:enabled="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reqPW"
        android:id="@+id/reqPWtextView"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:clickable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editEmailForPW"
        android:hint="Email" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetPW"
        android:id="@+id/changePWButton"
        android:layout_row="5"
        android:layout_column="0"
        android:enabled="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

</GridLayout>