<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="hse.beryukhov.quidproquo.activities.GetLocationActivity"
    android:columnCount="3"

    >

    <GridLayout
        android:id="@+id/userMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="3"
        android:background="@color/colorPrimary"
        android:columnCount="3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backToMainImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:clickable="true"
            android:contentDescription="@string/postButton"
            android:src="@drawable/ic_arrow_back_white_48dp"
            android:padding="12dp" />

        <TextView
            android:id="@+id/editProfileTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_row="0"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/set_location"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/saveLocImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_column="2"
            android:layout_row="0"
            android:contentDescription="@string/postStateMarkerHolder"
            android:src="@drawable/ic_done_white_48dp"
            android:padding="12dp" />


    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_location_button"
        android:id="@+id/findLocationButton"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="3"
        android:clickable="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="5"
        android:id="@+id/addressEditText"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/address_hint"
        android:layout_margin="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_address"
        android:id="@+id/addressFindButton"
        android:layout_row="2"
        android:layout_column="2"
        android:background="@color/colorAccent2"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_margin="8dp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SearchDistanceHint"
        android:id="@+id/searchDistTextView"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:layout_gravity="center_vertical"
        />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:entries="@array/searchDistance"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="fill_horizontal|center_vertical" />

</GridLayout>
