<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <GridLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuLayout"
        android:background="@color/colorPrimary"
        android:columnCount="3">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/userImageView"

            android:contentDescription="@string/userImageViewDescr"
            android:src="@drawable/ic_menu_white_24dp"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:layout_column="0"
            android:layout_row="0"
            android:scaleType="fitCenter"
            android:padding="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/new_posts"
            android:id="@+id/userNameTextView"

            android:singleLine="false"

            android:maxLines="2"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_column="1"
            android:layout_row="0"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/set_location_button"

            android:layout_width="48dp"
            android:layout_height="48dp"

            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_my_location_white_24dp"
            android:contentDescription="@string/postButton"
            android:background="#00ffffff"
            android:clickable="true"
            android:baselineAlignBottom="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:layout_column="2"
            android:layout_row="0"
            android:padding="12dp" />


    </GridLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menuLayout"
        android:id="@+id/swipeRefresh">
    <ListView
        android:id="@+id/posts_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />
    </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/warningTextView"
            android:layout_alignTop="@+id/swipeRefresh"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />


    </RelativeLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_circle_black_56dp"
        fab:fab_colorNormal="@android:color/white"
        fab:fab_colorPressed="@android:color/white"
        fab:fab_colorRipple="@android:color/white"
        android:scaleType="centerCrop" />
</FrameLayout>